--- a/2025.md
+++ b/2025.md
@@ -1,1 +1,4 @@
-1. [Harnessing Chaos: Turning chaos into something useful.](https://github.com/beyond-the-equation/1_harnessing_chaos).
+> NOTE: Date metadata and month categorization to be added later.
+
+1. **Harnessing Chaos: Turning chaos into something useful**
+    - [https://github.com/beyond-the-equation/1_harnessing_chaos](https://github.com/beyond-the-equation/1_harnessing_chaos).
